# routine-grid-api

./: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
apps/habits/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/habits/migrations/: 0001_initial.py
apps/users/: serializers.py  signals.py  tests.py  urls.py  views.py
apps/users/management/commands/: test_email.py
routine_grid_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
templates/api_docs/: scalar.html
templates/django_rest_passwordreset/: password_reset_token.html
templates/email/: password_reset_token.html  password_reset_token.txt
